--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
             <version>1.2.17</version>
         </dependency>
 
-        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
         <dependency>
             <groupId>net.proteanit.sql</groupId>
             <artifactId>rs2xml</artifactId>
